# houston

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  claude-method-meebu.md  claude-method.md  package.json  pnpm-lock.yaml
.claude/: method.config  rules.md  settings.json
.claude/agents/: code-reviewer.md  integrator.md  qa-validator.md
.claude/commands/: integrate.md
.claude/hooks/: gate-merge.sh
.github/release-notes/: 0.4.10.md  0.4.16.md  0.4.8.md
.github/workflows/: release.yml
.squad/team/: team.json
always-on/: .env.example
app/: package.json  vite.config.ts
app/houston-tauri/: Cargo.toml
app/squad-tauri/: Cargo.toml  README.md
app/squad-tauri/src/: event_sink.rs  lib.rs  state.rs  tray.rs
app/src/: App.tsx  main.tsx  vite-env.d.ts
app/src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/src/: auth.rs  engine_supervisor.rs  lib.rs  logging.rs  main.rs
app/src/agents/: core-tabs.ts  tab-resolver.ts
app/src/components/: agent-picker-dialog.tsx  agent-state-avatar.tsx  attachment-rejection-dialog.tsx  chat-model-selector.tsx  composio-auth-dialog.tsx  composio-link-card.tsx  dashboard.tsx  houston-credits-banner.tsx  mission-board-columns.ts  (+26 more)
app/tests/: feed-dedupe.test.ts  mission-board-columns.test.ts  store-deep-link.test.ts  store-sorter.test.ts
docs/: mobile-architecture.md  relay-operations.md
engine/houston-agent-files/: Cargo.toml
engine/houston-agents-conversations/: Cargo.toml
engine/houston-claude-installer/: Cargo.toml
engine/houston-cli-bundle/: Cargo.toml
engine/houston-composio/: Cargo.toml
engine/houston-db/: Cargo.toml
engine/houston-engine-core/: Cargo.toml
engine/houston-engine-protocol/: Cargo.toml
engine/houston-engine-server/: Cargo.toml
engine/houston-events/: Cargo.toml
engine/houston-file-watcher/: Cargo.toml
engine/houston-scheduler/: Cargo.toml
engine/houston-skills/: Cargo.toml
engine/houston-terminal-manager/: Cargo.toml
engine/houston-tunnel/: Cargo.toml
engine/houston-ui-events/: Cargo.toml
engine/squad-agent-files/: Cargo.toml
engine/squad-agents-conversations/: Cargo.toml
engine/squad-agents-conversations/src/: lib.rs  session_id_tracker.rs  session_runner.rs  supervisor.rs
engine/squad-claude-installer/: Cargo.toml
engine/squad-cli-bundle/: Cargo.toml
engine/squad-cli-bundle/src/: lib.rs
engine/squad-composio/: Cargo.toml
engine/squad-composio/src/: auth.rs  cli.rs  commands.rs  connection_watcher.rs  install.rs  lib.rs  lifecycle.rs
engine/squad-db/: Cargo.toml
engine/squad-engine-core/: Cargo.toml
engine/squad-engine-core/src/: agent_configs.rs  agents_crud.rs  conversations.rs  error.rs  git_bash.rs  lib.rs  library.rs  methodology.rs  paths.rs  preferences.rs  provider.rs  skills.rs  state.rs  store.rs  workspaces.rs  worktree.rs
engine/squad-engine-core/src/agents/: activity.rs  config.rs  files.rs  learnings_context.rs  mod.rs  prompt.rs  routine_runs.rs  routines.rs  store.rs  types.rs
engine/squad-engine-core/src/provider/: resolve.rs
engine/squad-engine-core/src/routines/: engine_dispatcher.rs  mod.rs  runner.rs  runs.rs  scheduler.rs  types.rs
engine/squad-engine-core/src/sessions/: cli_runner.rs  file_changes.rs  history.rs  mod.rs  provider.rs  qa_reviewer.rs  spec_writer.rs  summarize.rs  tests_writer.rs  transcript_ingest.rs
engine/squad-engine-core/src/sessions/transcript_ingest/: feed.rs  mod.rs
engine/squad-engine-core/src/store/: bundled.rs
engine/squad-engine-protocol/: Cargo.toml
engine/squad-engine-protocol/src/: lib.rs
engine/squad-engine-server/: Cargo.toml  README.md
engine/squad-engine-server/src/: auth.rs  config.rs  lib.rs  main.rs  mobile_access.rs  state.rs  ws.rs
engine/squad-engine-server/src/routes/: agent_configs.rs  agent_files.rs  agents.rs  attachments.rs  claude.rs  composio.rs  conversations.rs  error.rs  git.rs  health.rs  library.rs  mcps.rs  methodology.rs  mod.rs  preferences.rs  projects.rs  providers.rs  pty.rs  routines.rs  sessions.rs  skills.rs  store.rs  suggest_instruction.rs  tunnel.rs  usage.rs  watcher.rs  workspaces.rs  worktree.rs
engine/squad-engine-server/tests/: agent_configs.rs  agent_files.rs  agents.rs  attachments.rs  composio.rs  conversations.rs  http.rs  methodology.rs  preferences.rs  providers.rs  routines.rs  sessions.rs  skills.rs  store.rs  tunnel.rs  usage.rs  workspaces.rs  worktree.rs
engine/squad-events/: Cargo.toml
engine/squad-events/src/: dispatcher.rs  handler.rs  lib.rs  queue.rs  types.rs
engine/squad-file-watcher/: Cargo.toml
engine/squad-git/: Cargo.toml
engine/squad-git/src/: lib.rs
engine/squad-methodology/: Cargo.toml
engine/squad-projects/: Cargo.toml
engine/squad-projects/src/: lib.rs
engine/squad-scheduler/: Cargo.toml
engine/squad-scheduler/src/: cron_job.rs  heartbeat.rs  lib.rs  scheduler.rs
engine/squad-skills/: Cargo.toml
engine/squad-terminal-manager/: Cargo.toml
engine/squad-tunnel/: Cargo.toml
engine/squad-ui-events/: Cargo.toml
engine/squad-ui-events/src/: lib.rs
examples/smartbooks/: README.md  package.json
knowledge-base/: README.md  agent-manifest.md  architecture.md  auth.md  cli-bundling.md  design-system.md  engine-protocol.md  engine-server.md  files-first.md  i18n.md  library.md  platform-matrix.md  production-infra.md  release-setup.md  skills.md  store-marketplace.md  team-library.md  windows-testing.md
mobile/: package.json
mobile/src/: App.tsx  index.css
scripts/: apply-tdd-snippets.mjs
ui/agent/: package.json
ui/agent-schemas/: package.json
ui/board/: README.md  package.json
ui/chat/: README.md  package.json
ui/core/: README.md  package.json
ui/engine-client/: README.md  package.json
ui/events/: package.json
ui/layout/: README.md  package.json
ui/review/: README.md  package.json
ui/routines/: README.md  package.json
ui/skills/: README.md  package.json
ui/terminal/: package.json
website/: eleventy.config.js  package.json  vercel.json
website/scripts/: fetch-integration-icons.mjs
website/src/: index.html
(+426 files in other folders)
