[workspace]
resolver = "2"
members = [
    "engine/squad-terminal-manager",
    "engine/squad-db",
    "app/squad-tauri",
    "engine/squad-events",
    "engine/squad-scheduler",
    "engine/squad-skills",
    "engine/squad-tunnel",
    "engine/squad-agent-files",
    "engine/squad-ui-events",
    "engine/squad-agents-conversations",
    "engine/squad-file-watcher",
    "engine/squad-composio",
    "engine/squad-cli-bundle",
    "engine/squad-claude-installer",
    "engine/squad-engine-core",
    "engine/squad-engine-protocol",
    "engine/squad-engine-server",
    "engine/squad-projects",
    "engine/squad-git",
    "app/src-tauri",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
squad-terminal-manager = { version = "0.4.19", path = "engine/squad-terminal-manager" }
squad-db = { version = "0.4.19", path = "engine/squad-db" }
squad-tauri = { version = "0.4.19", path = "app/squad-tauri" }
squad-events = { version = "0.4.19", path = "engine/squad-events" }
squad-scheduler = { version = "0.4.19", path = "engine/squad-scheduler" }
squad-skills = { version = "0.4.19", path = "engine/squad-skills" }
squad-tunnel = { version = "0.4.19", path = "engine/squad-tunnel" }
squad-agent-files = { version = "0.4.19", path = "engine/squad-agent-files" }
squad-ui-events = { version = "0.4.19", path = "engine/squad-ui-events" }
squad-agents-conversations = { version = "0.4.19", path = "engine/squad-agents-conversations" }
squad-file-watcher = { version = "0.4.19", path = "engine/squad-file-watcher" }
squad-composio = { version = "0.4.19", path = "engine/squad-composio" }
squad-cli-bundle = { version = "0.4.19", path = "engine/squad-cli-bundle" }
squad-claude-installer = { version = "0.4.19", path = "engine/squad-claude-installer" }
squad-engine-core = { version = "0.4.19", path = "engine/squad-engine-core" }
squad-engine-protocol = { version = "0.4.19", path = "engine/squad-engine-protocol" }
squad-engine-server = { version = "0.4.19", path = "engine/squad-engine-server" }
squad-projects = { version = "0.4.19", path = "engine/squad-projects" }
squad-git = { version = "0.4.19", path = "engine/squad-git" }
portable-pty = "0.8"
