[package]
name = "squad-tauri"
version = "0.4.19"
edition = "2021"
description = "Thin Tauri adapter for the Houston desktop app. Owns the event-sink bridge, tray UI, path helpers, and shared state. All domain logic lives in the engine crates."
license = "MIT"
repository = "https://github.com/getsquad/squad"

[dependencies]
squad-terminal-manager = { workspace = true }
squad-db = { workspace = true }
squad-events = { workspace = true }
squad-scheduler = { workspace = true }
squad-agent-files = { workspace = true }
squad-ui-events = { workspace = true }
squad-agents-conversations = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tauri = { version = "2", features = ["tray-icon"] }
tracing = { workspace = true }
