[package]
name = "squad-agents-conversations"
version = "0.4.19"
edition = "2021"
description = "Orchestrates multi-session conversation lifecycle for Houston agents — spawn, monitor, persist, supervise"
license = "MIT"
repository = "https://github.com/getsquad/squad"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
squad-terminal-manager = { workspace = true }
squad-db = { workspace = true }
squad-ui-events = { workspace = true }

[dev-dependencies]
tempfile = "3"
