[package]
name = "squad-cli-bundle"
version = "0.4.19"
edition = "2021"
description = "Resolve bundled CLI binaries (codex, composio) inside the Houston .app — runtime side"
license = "MIT"
repository = "https://github.com/getsquad/squad"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
