[package]
name = "squad-composio"
version = "0.4.19"
edition = "2021"
description = "Composio integration — CLI install/lifecycle, OAuth, app catalog (transport-neutral)"
license = "MIT"
repository = "https://github.com/getsquad/squad"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
sha2 = "0.10"
squad-ui-events = { workspace = true }
squad-db = { workspace = true }
squad-cli-bundle = { workspace = true }
# Cross-platform home-directory resolution (used by install.rs to locate
# `~/.composio/composio[.exe]` on macOS/Linux and `%USERPROFILE%\.composio\…`
# on Windows).
dirs = "5"
