[package]
name = "squad-engine-protocol"
version = "0.4.19"
edition = "2021"
description = "Wire types for Houston Engine — REST DTOs, WS envelope, error codes, version const"
license = "MIT"
repository = "https://github.com/getsquad/squad"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
squad-ui-events = { workspace = true }
squad-terminal-manager = { workspace = true }
