[package]
name = "squad-events"
version = "0.4.19"
edition = "2021"
description = "Core event system for AI agent desktop apps — unified input queue"
license = "MIT"
repository = "https://github.com/getsquad/squad"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
