[package]
name = "squad-projects"
version = "0.4.19"
edition = "2021"
description = "Project (repo binding) management for Squad workspaces"
license = "MIT"
repository = "https://github.com/getsquad/squad"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2"
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
