[package]
name = "squad-ui-events"
version = "0.4.19"
edition = "2021"
description = "Event types emitted from Houston backend to the UI via Tauri's event bus"
license = "MIT"
repository = "https://github.com/getsquad/squad"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
squad-terminal-manager = { workspace = true }
